force-app/main/default/objects/Form_Section__mdt/Form_Section__mdt.object-meta.xml
<CustomObject>
    <label>Form Section</label>
    <pluralLabel>Form Sections</pluralLabel>
</CustomObject>