force-app/main/default/objects/Form_Section__mdt/fields/Allow_Multiple_Rows__c.field-meta.xml
<CustomField>
    <fullName>Allow_Multiple_Rows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the section is for child object, specify if more than one record data is required</description>
    <label>Allow Multiple Rows</label>
    <type>Checkbox</type>
</CustomField>