force-app/main/default/objects/Form_Section__mdt/fields/Collapse_by_Default__c.field-meta.xml
<CustomField>
    <fullName>Collapse_by_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this section will appear collapsed when the form first loads, requiring the user to click to expand it.</description>
    <inlineHelpText>If checked, this section will appear collapsed when the form first loads, requiring the user to click to expand it.</inlineHelpText>
    <label>Collapse by Default</label>
    <type>Checkbox</type>
</CustomField>