force-app/main/default/objects/Form_Section__mdt/fields/Custom_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Component_Name__c</fullName>
    <description>Name of the child LWC that you&apos;d like to embed in main form</description>
    <label>Custom Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>