force-app/main/default/objects/Form_Section__mdt/fields/Form_Config__c.field-meta.xml
<CustomField>
    <fullName>Form_Config__c</fullName>
    <label>Form Config</label>
    <referenceTo>Form_Config__mdt</referenceTo>
    <relationshipLabel>Form Sections</relationshipLabel>
    <relationshipName>Form_Sections</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>