force-app/main/default/objects/Form_Section__mdt/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this section is a Matrix, checking this box will require the user to populate at least one cell in the matrix before saving or proceeding.</description>
    <inlineHelpText>If this section is a Matrix, checking this box will require the user to populate at least one cell in the matrix before saving or proceeding.</inlineHelpText>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>