force-app/main/default/objects/Form_Section__mdt/fields/Number_of_Columns__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Columns__c</fullName>
    <description>The number of columns to divide the section</description>
    <label>Number of Columns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>