force-app/main/default/objects/Form_Section__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Store the API name of the object that relates to the fields in this section</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>