force-app/main/default/objects/Form_Section__mdt/fields/Override_Label__c.field-meta.xml
<CustomField>
    <fullName>Override_Label__c</fullName>
    <description>If you need a section name longer than 40 characters, enter it here. It will override the standard Label on the form.</description>
    <inlineHelpText>If you need a section name longer than 40 characters, enter it here. It will override the standard Label on the form.</inlineHelpText>
    <label>Override Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>