force-app/main/default/objects/Form_Section__mdt/fields/Parent_Section_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Parent_Section_DeveloperName__c</fullName>
    <label>Parent Section DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>