force-app/main/default/objects/Form_Section__mdt/fields/Relationship_Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Parent_Field__c</fullName>
    <description>Store the reference (lookup or master detail) field API name on the child object</description>
    <label>Relationship Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>