force-app/main/default/objects/Form_Section__mdt/fields/Render_As__c.field-meta.xml
<CustomField>
    <fullName>Render_As__c</fullName>
    <label>Render As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Matrix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>