force-app/main/default/objects/Form_Section__mdt/fields/Section_Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>Section_Config_JSON__c</fullName>
    <label>Section Config JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>