force-app/main/default/objects/Form_Section__mdt/fields/Show_On__c.field-meta.xml
<CustomField>
    <fullName>Show_On__c</fullName>
    <description>Determines whether to show or hide a section in create mode, edit mode or both</description>
    <label>Show On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create</fullName>
                <default>true</default>
                <label>Create</label>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>